--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,13 +1,8 @@
-body {
-    background-color: black;
-    color: green;
-}
-
-/* h1{
+h1{
     background-color: black;
     color: green;
 }
 h2 {
     background-color: black;
     color: green;
-} */
+}
